# RPi_Object_Tracking

./: CMakeLists.txt  package.xml
cfg/cv/: tracking_calibration.yaml
launch/: line_calibration.launch  raspi_cam.launch
src/cpp/: tracking_calibration.cpp
src/python/: capture_image.py  raspi_cam.py  raspicam_bridge.py  tracking.py
